--- a/package.json
+++ b/package.json
@@ -8,25 +8,26 @@
     "test": "jest"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.3.6",
+    "@reduxjs/toolkit": "^1.8.1",
     "next": "latest",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.0.0",
-    "@testing-library/react": "^12.1.0",
-    "@testing-library/user-event": "^13.0.0",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.9.1",
-    "@types/react": "^17.0.21",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-redux": "^7.1.18",
-    "jest": "^27.2.0",
-    "jest-css-modules-transform": "^4.2.0",
-    "ts-jest": "^27.0.5",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.3.4"
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
+    "@testing-library/user-event": "^14.1.1",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.25",
+    "@types/react": "^18.0.6",
+    "@types/react-dom": "^18.0.2",
+    "@types/react-redux": "^7.1.24",
+    "jest": "^27.5.1",
+    "jest-css-modules-transform": "^4.3.0",
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   }
 }
